[package]
name = "kalc-cli"
version = "0.1.1"
edition = "2024"
description = "kalc - quick basic math kalculator in cli"
authors = ["Samuel Onoja <samiodev@icloud.com>"]
license = "MIT"
repository = "https://github.com/borngraced/kalc"
documentation = "https://github.com/borngraced/kalc#readme"
readme = "README.md"
keywords = ["calculator", "math", "cli", "parser"]
categories = ["command-line-utilities", "mathematics"]

[dependencies]
anyhow = "1.0"

[[bin]]
name = "kalc"
path = "src/main.rs"
